# paidy-assignment

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 0001_orders_table.sql
src/: main.rs
src/fixtures/: orders.sql
