[package]
name = "paidy-assignment"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1.39.3", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "any", "postgres"] }

[dev-dependencies]
serde_json = "1.0"
http-body-util = "0.1.0"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["trace"] }
mime = "0.3"
